@@ -200,6 +200,7 @@ typedef struct {
   real *dp_alpha;		/* polarisability */
   real *dp_b;			/* parameter for short-range-dipole-moment */
   real *dp_c;			/* parameter for short-range-dipole-moment */
+  real *dp_kappa;        	/* parameter kappa */
   int   sum_t;			/* dipole-convergency output */
 #endif
 
@@ -393,8 +394,8 @@ EXTERN char *component[6];	/* componentes of vectors and tensors */
 /* variables needed for electrostatic options */
 #ifdef COULOMB
 EXTERN real dp_eps INIT(14.40);	/* this is e^2/(4*pi*epsilon_0) in eV A */
-EXTERN real dp_kappa INIT(0.10);	/* parameter kappa */
 EXTERN real dp_cut INIT(10);	/* cutoff-radius for long-range interactions */
+EXTERN real sw_kappa INIT(0);  /* switch for variable dp_kappa */
 #endif /* COULOMB */
 #ifdef DIPOLE
 EXTERN real dp_tol INIT(1.e-7);	/* dipole iteration precision */
